--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
             <div class="paper">
                 I'm currently a Ph.D. student in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
-                Before that, I received my B.E. degree in the <a href='http://www.dae.tsinghua.edu.cn/'>Department of Automative Engineering</a> in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
+                Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
                 My research interests include computer vision and machine learning, particularly unsupervised learning.
             </div>
