--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                         <br>
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
+                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Self-Supervised_Scene_De-Occlusion_CVPR_2020_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/2004.02788'>[arXiv]</a>
                         <a href='projects/deocclusion/'>[Project Page]</a>
                         <a href="https://github.com/XiaohangZhan/deocclusion">[Code]</a>
@@ -291,6 +292,8 @@
                         <br>
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
                         <br>
+                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Online_Deep_Clustering_for_Unsupervised_Representation_Learning_CVPR_2020_paper.pdf'>[PDF]</a>
+                        <a href="https://github.com/open-mmlab/OpenSelfSup">[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -302,7 +305,10 @@
                         <br>
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
                         <br>
+                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Yang_Learning_to_Cluster_Faces_via_Confidence_and_Connectivity_Estimation_CVPR_2020_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/2004.00445'>[arXiv]</a>
+                        <a href='http://yanglei.me/project/ltc_v2/'>[Project Page]</a>
+                        <a href="https://github.com/yl-1993/learn-to-cluster">[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -314,6 +320,7 @@
                         <br>
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
+                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Liu_Open_Compound_Domain_Adaptation_CVPR_2020_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1909.03403'>[arXiv]</a>
                         <a href='https://liuziwei7.github.io/projects/CompoundDomain.html'>[Project Page]</a>
                         <a href='https://www.youtube.com/watch?v=YcmgCCRA1qc'>[Demo]</a>
