--- a/index.html
+++ b/index.html
@@ -467,9 +467,9 @@
     <div style="clear: both;">
         <div class="section"><h2>Talks</h2>
             <div class="paper">
-                <li>2017 @ JD <a href=pdf/talk-jd-2017.pdf>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></li>
-                <li>2019 @ HKSTP <a href=pdf/talk-hkstp-2019.pdf>Self-Supervised Learning via Conditional Motion Propagation</a></li>
-
+                <li>2017 @ JD: <a href=pdf/talk-jd-2017.pdf>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></li>
+                <li>2019 @ HKSTP: <a href=pdf/talk-hkstp-2019.pdf>Self-Supervised Learning via Conditional Motion Propagation</a></li>
+                <li>2020 @ SenseTime TITAN Open Classes: <a href=pdf/talk-st-2020.pdf>Self-Supervised Learning</a></li>
             </div>
             <div class="spanner"></div>
         </div>
