--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
             <h2>News</h2>
             <div class="paper">
                 <ul>
+                    [16/06/2020] Self-Supervised Learning toolbox and benchmark codebase <a href='https://github.com/open-mmlab/OpenSelfSup'>OpenSelfSup</a> is released.<br>
                     [13/03/2020] Four papers were accepted to CVPR 2020, two of them were selected as oral presentations.<br>
                     [01/11/2019] Our team won the 1st places in all 4 tracks on Facebook AI Self-Supervision Challenge.<br>
                     [23/07/2019] One paper was accepted to ICCV 2019.<br>
@@ -293,6 +294,7 @@
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Online_Deep_Clustering_for_Unsupervised_Representation_Learning_CVPR_2020_paper.pdf'>[PDF]</a>
+                        <a href='https://arxiv.org/abs/2006.10645'>[arXiv]</a>
                         <a href="https://github.com/open-mmlab/OpenSelfSup">[Code]</a>
                     </div>
                     <div class="spanner"></div>
