--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="edu" id="cuhk"><img class="icon" src="icons/cuhk_icon.png" title="cuhk" />
                 <div> <font size="20"><strong>The Chinese University of Hong Kong</strong></font><br />
                     <br>
-                    <font color="gray">August 2017 - August 2020. Ph.D. in Information Engineering.</font>
+                    <font color="gray">August 2017 - August 2020 (1 year shortened). Ph.D. in Information Engineering.</font>
                 </div>
                 <div class="spanner"></div>
             </div>
@@ -238,6 +238,7 @@
             <h2>News</h2>
             <div class="paper">
                 <ul>
+                    [03/07/2020] One paper was accepted to ECCV 2020 as oral.<br>
                     [16/06/2020] Self-Supervised Learning toolbox and benchmark codebase <a href='https://github.com/open-mmlab/OpenSelfSup'>OpenSelfSup</a> is released.<br>
                     [13/03/2020] Four papers were accepted to CVPR 2020, two of them were selected as oral presentations.<br>
                     [01/11/2019] Our team won the 1st places in all 4 tracks on Facebook AI Self-Supervision Challenge.<br>
@@ -261,7 +262,7 @@
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Bo Dai, Dahua Lin, Chen Change Loy, Ping Luo
                         <br>
-                        arXiv preprint
+                        <em>European Conference on Computer Vision (ECCV), 2018 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2003.13659'>[arXiv]</a>
                         <a href='https://xingangpan.github.io/projects/DGP.html'>[Project Page]</a>
