--- a/index.html
+++ b/index.html
@@ -257,7 +257,20 @@
 
             <div> <strong>2020</strong><br />
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/dgp.png" title="dgp" />
+                <div class="paper" id="arxiv"><img class="paper" src="images/interclr.png" title="interclr" />
+                    <div> <strong>Delving into Inter-Image Invariance for Unsupervised Visual Representations</strong><br />
+                        <br>
+                        Jiahao Xie, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
+                        <br>
+                        <em>ArXiv</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2008.11702'>[arXiv]</a>
+                        <a href="https://github.com/open-mmlab/OpenSelfSup">[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/eccv20-dgp.png" title="dgp" />
                     <div> <strong>Exploiting Deep Generative Prior for Versatile Image Restoration and Manipulation</strong><br />
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Bo Dai, Dahua Lin, Chen Change Loy, Ping Luo
@@ -472,7 +485,7 @@
             <div class="paper">
                 <li>2017 @ JD: <a href=pdf/talk-jd-2017.pdf>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></li>
                 <li>2019 @ HKSTP: <a href=pdf/talk-hkstp-2019.pdf>Self-Supervised Learning via Conditional Motion Propagation</a></li>
-                <li>2020 @ SenseTime TITAN Open Classes: <a href=pdf/talk-st-2020.pdf>Self-Supervised Learning</a></li>
+                <li>2020 @ SenseTime TITAN Open Classes <a href='https://www.bilibili.com/video/av883608955/'>[Video Record]</a>: <a href=pdf/talk-st-2020.pdf>Self-Supervised Learning</a></li>
             </div>
             <div class="spanner"></div>
         </div>
