--- a/index.html
+++ b/index.html
@@ -257,15 +257,26 @@
 
             <div> <strong>2020</strong><br />
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/bsim.png" title="bsim" />
+                    <div> <strong>Beyond Single Instance Multi-view Unsupervised Representation Learning</strong><br />
+                        <br>
+                        Xiangxiang Chu, <strong>Xiaohang Zhan</strong>, Xiaolin Wei
+                        <br>
+                        <em>ArXiv Preprints</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2011.13356'>[arXiv]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/interclr.png" title="interclr" />
                     <div> <strong>Delving into Inter-Image Invariance for Unsupervised Visual Representations</strong><br />
                         <br>
                         Jiahao Xie, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
                         <br>
-                        <em>ArXiv</em><br />
+                        <em>ArXiv Preprints</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2008.11702'>[arXiv]</a>
-                        <a href="https://github.com/open-mmlab/OpenSelfSup">[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
