--- a/index.html
+++ b/index.html
@@ -255,8 +255,21 @@
         <div class="section">
             <h2 id="confpapers">Publications</h2>
 
-            <div> <strong>2020</strong><br />
+            <div> <strong>2021</strong><br />
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/detco.png" title="detco" />
+                    <div> <strong>DetCo: Unsupervised Contrastive Learning for Object Detection</strong><br />
+                        <br>
+                        Enze Xie, Jian Ding, Wenhai Wang, <strong>Xiaohang Zhan</strong>, Hang Xu, Zhenguo Li, Ping Luo
+                        <br>
+                        <em>ArXiv Preprints</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2102.04803'>[arXiv]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+            <div> <strong>2020</strong><br />
                 <div class="paper" id="arxiv"><img class="paper" src="images/bsim.png" title="bsim" />
                     <div> <strong>Beyond Single Instance Multi-view Unsupervised Representation Learning</strong><br />
                         <br>
