--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         <div class="section">
             <h2 id="confpapers">Professional activities</h2>
             <div class="paper">
-                <li>Reviewer of IJCV, CVPR (2019, 2020), ICCV (2019), BMVC (2019), AAAI (2020), ECCV (2020).</li>
+                <li>Reviewer of T-PAMI, IJCV, CVPR (2019, 2020, 2021), ICCV (2019), BMVC (2019), AAAI (2020), ECCV (2020).</li>
                 <ul>
                     <p><font size="5"></font></p>
                 </ul>
