--- a/index.html
+++ b/index.html
@@ -188,10 +188,9 @@
             <img title="XiaohangZhan" style="float: left; padding-left: .01em; height: 140px;" src="XiaohangZhan.jpg" />
             <div style="padding-left: 12em; vertical-align: top; height: 120px;"><span style="line-height: 150%; font-size: 20pt;">Xiaohang Zhan (詹晓航)</span><br />
                 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-2136-7592" href="https://orcid.org/0000-0003-2136-7592" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0003-2136-7592</a></div>
-                <span><strong>Ph.D. student</strong></span><br />
-                <span><a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory (MMLab)</a></span><br />
-                <span>Department of Information Engineering, The Chinese University of Hong Kong</span><br />
-                <span><a href="mailto:zx017@ie.cuhk.edu.hk">email</a></span><br />
+                <span><strong>Researcher</strong></span><br />
+                <span>Central Media Technology Institute, 2012 Labs, <a href='https://www.huawei.com/en/'>Huawei Technologies Co., Ltd</a></span><br />
+                <span><a href="mailto:xiaohangzhan@outlook.com">email</a></span><br />
             </div>
         </div>
     </div>
@@ -200,10 +199,23 @@
         <div class="section">
             <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
             <div class="paper">
-                I'm currently a Ph.D. student in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
+                I'm currently a researcher in 2012 Labs, Huawei. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
                 Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
-                My research interests include computer vision and machine learning, particularly unsupervised learning.
+                My research interests include unsupervised learning and computer vision from 2016, and computer graphics from 2020.
+            </div>
+        </div>
+    </div>
+
+    <div style="clear: both;">
+        <div class="section">
+            <h2 id="work">Experience</h2>
+            <div class="edu" id="huawei"><img class="icon" src="icons/huawei_icon.jpeg" title="huawei" />
+                <div> <font size="20"><strong>Central Media Technology Institute, 2012 Labs, Huawei Technologies Co., Ltd</strong></font><br />
+                    <br>
+                    <font color="gray">August 2020 - Now. Researcher (Huawei Genius Youth Program, 2020).</font>
+                </div>
+                <div class="spanner"></div>
             </div>
         </div>
     </div>
@@ -265,6 +277,7 @@
                         <em>ArXiv Preprints</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2102.04803'>[arXiv]</a>
+                        <a href="https://github.com/xieenze/DetCo">[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -299,7 +312,7 @@
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Bo Dai, Dahua Lin, Chen Change Loy, Ping Luo
                         <br>
-                        <em>European Conference on Computer Vision (ECCV), 2018 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <em>European Conference on Computer Vision (ECCV), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2003.13659'>[arXiv]</a>
                         <a href='https://xingangpan.github.io/projects/DGP.html'>[Project Page]</a>
@@ -474,6 +487,21 @@
                     </div>
                     <div class="spanner"></div>
                 </div>
+
+                <div class="paper" id="AAAI2018"><img class="paper" src="images/aaai18-mm.png" title="aaai18-mm" />
+                    <div> <strong>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</strong><br />
+                        <br>
+                        <strong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy
+                        <br>
+                        <em>AAAI Conference on Artificial Intelligence (AAAI), 2018 (<font color="orange"><strong>Spotlight</strong></font>)</em><br />
+                        <br>
+                        <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/aaai_2018_mix.pdf'>[PDF]</a>
+                        <a href='https://arxiv.org/abs/1712.00661'>[arXiv]</a>
+                        <a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
+                        <a href='https://github.com/XiaohangZhan/mix-and-match'>[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -483,6 +511,7 @@
             <h2 id="confpapers">Professional activities</h2>
             <div class="paper">
                 <li>Reviewer of IJCV, CVPR (2019, 2020), ICCV (2019), BMVC (2019), AAAI (2020), ECCV (2020).</li>
+                <li><a href='https://xingangpan.github.io/projects/CULane.html'>CULane Dataset</a>: a large-scale challenging dataset for traffic lane detection.
                 <ul>
                     <p><font size="5"></font></p>
                 </ul>
@@ -510,6 +539,8 @@
                 <li>2017 @ JD: <a href=pdf/talk-jd-2017.pdf>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></li>
                 <li>2019 @ HKSTP: <a href=pdf/talk-hkstp-2019.pdf>Self-Supervised Learning via Conditional Motion Propagation</a></li>
                 <li>2020 @ SenseTime TITAN Open Classes <a href='https://www.bilibili.com/video/av883608955/'>[Video Record]</a>: <a href=pdf/talk-st-2020.pdf>Self-Supervised Learning</a></li>
+                <li>2020 @ Tsinghua: <a href=pdf/talk-thu-2020.pdf>Exploiting Unlabeled Data in Computer Vision</a></li>
+                <li>2020 @ Zhidongxi Open Classes <a href='https://course.zhidx.com/c/Yjk1ZjYxMmI2NjIyNTg1YmY2MDM='>[Video Record]</a>: <a href=pdf/talk-zhidongxi-2020.pdf>Understanding and Practice of OpenSelfSup: an Open-source Library for Self-Supervised Learning</a></li>
             </div>
             <div class="spanner"></div>
         </div>
@@ -520,6 +551,7 @@
     <div style="clear: both;">
         <div class="section"><h2>Honors and Awards</h2>
             <div class="paper">
+                <li>Huawei Genius Youth, 2020</li>
                 <li>Winner of <a href='https://sites.google.com/view/fb-ssl-challenge-iccv19/home'>Facebook AI Self-Supervision Challenge 2019</a></li>
                 <li>Hong Kong PhD Fellowship, 2017, the Research Grants Council (RGC) of Hong Kong</li>
                 <li>Outstanding Graduate of Tsinghua University, 2016 (63 winners out of about 3500 graduates)</li>
