--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
     <div style="clear: both;">
         <div class="section"><h2>Honors and Awards</h2>
             <div class="paper">
+                <li>Top 100 Chinese New Stars in Artificial Intelligence by Baidu Scholar, <a href="https://mp.weixin.qq.com/s/v7ITiZXOJiDUbPlRlcqQRA">AI华人新星百强</a> (100 out of 45205).</li>
                 <li>Huawei Genius Youth, 2020</li>
                 <li>Winner of <a href='https://sites.google.com/view/fb-ssl-challenge-iccv19/home'>Facebook AI Self-Supervision Challenge 2019</a></li>
                 <li>Hong Kong PhD Fellowship, 2017, the Research Grants Council (RGC) of Hong Kong</li>
@@ -551,18 +552,6 @@
         </div>
     </div>
 
-    <!-- <div style="clear: both;">
-        <div class="section"><h2>Friends</h2>
-            <div class="paper">
-                <a href="http://wanglimin.github.io/">Limin Wang</a> (ETHz),
-                <a href="http://wangzheallen.github.io/">Zhe Wang</a> (UCI),
-                <a href="http://ydwen.github.io/">Yandong Wen</a> (CMU),
-                <a href="http://zbwglory.github.io/">Bowen Zhang</a> (USC),
-                <a href="http://kpzhang93.github.io/">Kaipeng Zhang</a> (NTU Taiwan),
-                <a href="http://guoshengcv.github.io/">Sheng Guo</a> (SIAT),
-            </div>
-        </div>
-    </div> -->
 
 
     <div style="clear:both;">
