--- a/index.html
+++ b/index.html
@@ -269,12 +269,24 @@
 
             <div> <strong>2021</strong><br />
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/detco.png" title="detco" />
+                <div class="paper" id="arxiv"><img class="paper" src="images/orl.png" title="orl" />
+                    <div> <strong>Unsupervised Object-Level Representation Learning from Scene Images</strong><br />
+                        <br>
+                        Jiahao Xie, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
+                        <br>
+                        <emArXiv Preprints</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2106.11952'>[arXiv]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="iccv21"><img class="paper" src="images/detco.png" title="detco" />
                     <div> <strong>DetCo: Unsupervised Contrastive Learning for Object Detection</strong><br />
                         <br>
                         Enze Xie, Jian Ding, Wenhai Wang, <strong>Xiaohang Zhan</strong>, Hang Xu, Zhenguo Li, Ping Luo
                         <br>
-                        <em>ArXiv Preprints</em><br />
+                        <em>IEEE International Conference on Computer Vision (ICCV), 2021</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2102.04803'>[arXiv]</a>
                         <a href="https://github.com/xieenze/DetCo">[Code]</a>
