--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@
 
             <div> <strong>2021</strong><br />
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/detco.png" title="detco" />
+                <div class="paper" id="arxiv"><img class="paper" src="images/iccv21-detco.png" title="detco" />
                     <div> <strong>DetCo: Unsupervised Contrastive Learning for Object Detection</strong><br />
                         <br>
-                        Enze Xie, Jian Ding, Wenhai Wang, <strong>Xiaohang Zhan</strong>, Hang Xu, Zhenguo Li, Ping Luo
+                        Enze Xie*, Jian Ding*, Wenhai Wang, <strong>Xiaohang Zhan</strong>, Hang Xu, Zhenguo Li, Ping Luo
                         <br>
-                        <em>ArXiv Preprints</em><br />
+                        <em>IEEE International Conference on Computer Vision (ICCV), 2021</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2102.04803'>[arXiv]</a>
                         <a href="https://github.com/xieenze/DetCo">[Code]</a>
