--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         <br>
                         Jiahao Xie, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
                         <br>
-                        <em>ArXiv Preprints</em><br />
+                        <em>Conference on Neural Information Processing Systems (NeurIPS), 2021</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2106.11952'>[arXiv]</a>
                     </div>
