--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                         <em>Conference on Neural Information Processing Systems (NeurIPS), 2021</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2106.11952'>[arXiv]</a>
+                        <a href='https://www.mmlab-ntu.com/project/orl/'>[Project Page]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -507,7 +508,7 @@
         <div class="section">
             <h2 id="confpapers">Professional activities</h2>
             <div class="paper">
-                <li>Reviewer of T-PAMI, IJCV, CVPR (2019, 2020, 2021), ICCV (2019), BMVC (2019), AAAI (2020), ECCV (2020).</li>
+                <li>Reviewer of T-PAMI, IJCV, CVPR, ICCV, ECCV, AAAI, BMVC.</li>
                 <li><a href='https://xingangpan.github.io/projects/CULane.html'>CULane Dataset</a>: a large-scale challenging dataset for traffic lane detection.
                 <ul>
                     <p><font size="5"></font></p>
