--- a/index.html
+++ b/index.html
@@ -326,6 +326,8 @@
                         <br>
                         <em>European Conference on Computer Vision (ECCV), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
+                        <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</em><br />
+                        <br>
                         <a href='https://arxiv.org/abs/2003.13659'>[arXiv]</a>
                         <a href='https://xingangpan.github.io/projects/DGP.html'>[Project Page]</a>
                         <a href="https://github.com/XingangPan/deep-generative-prior">[Code]</a>
