--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Bo Dai, Dahua Lin, Chen Change Loy, Ping Luo
                         <br>
-                        <em>European Conference on Computer Vision (ECCV), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <em>European Conference on Computer Vision (ECCV), 2020 (<font color="orange"><strong>Oral</strong></font>)</em>
                         <br>
                         <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</em><br />
                         <br>
