--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <br>
                         <em>Conference on Neural Information Processing Systems (NeurIPS), 2021</em><br />
                         <br>
-                        <a href='https://arxiv.org/abs/2106.11952'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/2106.11952'>[preprint]</a>
                         <a href='https://www.mmlab-ntu.com/project/orl/'>[Project Page]</a>
                     </div>
                     <div class="spanner"></div>
@@ -288,7 +288,7 @@
                         <br>
                         <em>IEEE International Conference on Computer Vision (ICCV), 2021</em><br />
                         <br>
-                        <a href='https://arxiv.org/abs/2102.04803'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/2102.04803'>[preprint]</a>
                         <a href="https://github.com/xieenze/DetCo">[Code]</a>
                     </div>
                     <div class="spanner"></div>
@@ -302,7 +302,7 @@
                         <br>
                         <em>ArXiv Preprints</em><br />
                         <br>
-                        <a href='https://arxiv.org/abs/2011.13356'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/2011.13356'>[preprint]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -314,7 +314,7 @@
                         <br>
                         <em>ArXiv Preprints</em><br />
                         <br>
-                        <a href='https://arxiv.org/abs/2008.11702'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/2008.11702'>[preprint]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -328,7 +328,7 @@
                         <br>
                         <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</em><br />
                         <br>
-                        <a href='https://arxiv.org/abs/2003.13659'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/2003.13659'>[preprint]</a>
                         <a href='https://xingangpan.github.io/projects/DGP.html'>[Project Page]</a>
                         <a href="https://github.com/XingangPan/deep-generative-prior">[Code]</a>
                     </div>
@@ -343,7 +343,7 @@
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Self-Supervised_Scene_De-Occlusion_CVPR_2020_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2004.02788'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/2004.02788'>[preprint]</a>
                         <a href='projects/deocclusion/'>[Project Page]</a>
                         <a href="https://github.com/XiaohangZhan/deocclusion">[Code]</a>
                         <a href='https://www.youtube.com/watch?v=xIHCyyaB5gU'>[Demo]</a>
@@ -359,7 +359,7 @@
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Online_Deep_Clustering_for_Unsupervised_Representation_Learning_CVPR_2020_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2006.10645'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/2006.10645'>[preprint]</a>
                         <a href="https://github.com/open-mmlab/OpenSelfSup">[Code]</a>
                     </div>
                     <div class="spanner"></div>
@@ -373,7 +373,7 @@
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Yang_Learning_to_Cluster_Faces_via_Confidence_and_Connectivity_Estimation_CVPR_2020_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2004.00445'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/2004.00445'>[preprint]</a>
                         <a href='http://yanglei.me/project/ltc_v2/'>[Project Page]</a>
                         <a href="https://github.com/yl-1993/learn-to-cluster">[Code]</a>
                     </div>
@@ -388,7 +388,7 @@
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Liu_Open_Compound_Domain_Adaptation_CVPR_2020_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1909.03403'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/1909.03403'>[preprint]</a>
                         <a href='https://liuziwei7.github.io/projects/CompoundDomain.html'>[Project Page]</a>
                         <a href='https://www.youtube.com/watch?v=YcmgCCRA1qc'>[Demo]</a>
                         <a href='https://github.com/zhmiao/OpenCompoundDomainAdaptation-OCDA'>[Code]</a>
@@ -417,7 +417,7 @@
                         <em>IEEE International Conference on Computer Vision (ICCV), 2019</em><br />
                         <br>
                         <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Pan_Switchable_Whitening_for_Deep_Representation_Learning_ICCV_2019_paper.pdf">[PDF]</a>
-                        <a href='https://arxiv.org/abs/1904.09739'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/1904.09739'>[preprint]</a>
                         <a href="https://github.com/XingangPan/Switchable-Whitening">[Code]</a>
                     </div>
                     <div class="spanner"></div>
@@ -431,7 +431,7 @@
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Liu_Large-Scale_Long-Tailed_Recognition_in_an_Open_World_CVPR_2019_paper.pdf">[PDF]</a>
-                        <a href='https://arxiv.org/abs/1904.05160'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/1904.05160'>[preprint]</a>
                         <a href='https://liuziwei7.github.io/projects/LongTail.html'>[Project Page]</a>
                         <a href='https://github.com/zhmiao/OpenLongTailRecognition-OLTR'>[Code]</a>
                     </div>
@@ -446,7 +446,7 @@
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_cluster.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1904.02749'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/1904.02749'>[preprint]</a>
                         <a href='http://yanglei.me/project/ltc/'>[Project Page]</a>
                         <a href='https://github.com/yl-1993/learn-to-cluster'>[Code]</a>
                     </div>
@@ -461,7 +461,7 @@
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 </em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_self.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1903.11412'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/1903.11412'>[preprint]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CMP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/conditional-motion-propagation/'>[Code]</a>
                         <a href='https://www.youtube.com/watch?v=6R_oJCq5qMw'>[Demo]</a>
@@ -480,7 +480,7 @@
                         <em>European Conference on Computer Vision (ECCV), 2018</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/eccv_2018_cdp.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1809.01407'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/1809.01407'>[preprint]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CDP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/cdp/'>[Code]</a>
                     </div>
@@ -495,7 +495,7 @@
                         <em>AAAI Conference on Artificial Intelligence (AAAI), 2018 (<font color="orange"><strong>Spotlight</strong></font>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/aaai_2018_mix.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1712.00661'>[arXiv]</a>
+                        <a href='https://arxiv.org/abs/1712.00661'>[preprint]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/mix-and-match'>[Code]</a>
                     </div>
