--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
         <div class="section">
             <h2 id="confpapers">Professional activities</h2>
             <div class="paper">
+                <li>The major developer of OpenSelfSup, an open-source self-supervised learning toolbox (Now <a href='https://github.com/open-mmlab/mmselfsup'>mmselfsup</a>).</li>
                 <li>Reviewer of T-PAMI, IJCV, CVPR, ICCV, ECCV, AAAI, BMVC.</li>
                 <li><a href='https://xingangpan.github.io/projects/CULane.html'>CULane Dataset</a>: a large-scale challenging dataset for traffic lane detection.
                 <ul>
