--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
                         <br>
                         <em>IEEE International Conference on Computer Vision (ICCV), 2021</em><br />
                         <br>
+                        <a href='https://openaccess.thecvf.com/content/ICCV2021/papers/Xie_DetCo_Unsupervised_Contrastive_Learning_for_Object_Detection_ICCV_2021_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/2102.04803'>[preprint]</a>
                         <a href="https://github.com/xieenze/DetCo">[Code]</a>
                     </div>
