--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
                         <br>
                         <a href='https://arxiv.org/abs/2106.11952'>[preprint]</a>
                         <a href='https://www.mmlab-ntu.com/project/orl/'>[Project Page]</a>
+                        <a href='https://github.com/Jiahao000/ORL'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
